Can't restore dynamics after suspending them. #26614

Closed
opened 2011-03-25 20:38:15 +01:00 by Alberto Torres Ruiz · 7 comments

%%%Open blend, press P.

Press S to suspend dynamics, press R to resume them.

Resume working in 2.56 but not in latest svn. Something happened with the bullet upgrade?
%%%

%%%Open blend, press P. Press S to suspend dynamics, press R to resume them. Resume working in 2.56 but not in latest svn. Something happened with the bullet upgrade? %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed. I really suspect is related to the bullet update as well. Erwin are you still following the tracker? Could you take a look at that?%%%

%%%Confirmed. I really suspect is related to the bullet update as well. Erwin are you still following the tracker? Could you take a look at that?%%%
Member

%%%Moved from Blender 2.5 Bug Tracker to Game Engine%%%

%%%Moved from Blender 2.5 Bug Tracker to Game Engine%%%
Member

%%%moving it to GE tracker though :)%%%

%%%moving it to GE tracker though :)%%%

%%%I was looking into the ge and I may have found the problem
In CcdPhyscisEnvironment::updateCcdPhysicsController(...) the obj is removed from
m_dynamicsWorld and added back later, but when adding is back it loses it's
btRigidBody "status" and becomes a btCollisionObject in the dynamicsWorld.

I attached a "here's the problem"-patch, it's not a proper fix though%%%

%%%I was looking into the ge and I may have found the problem In CcdPhyscisEnvironment::updateCcdPhysicsController(...) the obj is removed from m_dynamicsWorld and added back later, but when adding is back it loses it's btRigidBody "status" and becomes a btCollisionObject in the dynamicsWorld. I attached a "here's the problem"-patch, it's not a proper fix though%%%

%%%The patch by Juha looks right. Can you try the latest trunk revision?%%%

%%%The patch by Juha looks right. Can you try the latest trunk revision?%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#26614
No description provided.