apply patch for body suspend/resume See also issue #26614 http://projects.blender.org/tracker/index.php?func=detail&aid=26614&group_id=9&atid=306